# pysampling

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.py  ~$logo.pptx
.claude/: CLAUDE.md
.github/workflows/: ci.yml
.pyclawd/: config.py
docs/: .gitignore  Makefile  README.md  README.template  cli.py  make.bat
docs/source/: _contributors.rst  _installation.rst  conf.py  index.ipynb  index.md  index.rst  llms.txt
docs/source/_static/: custom.css
docs/source/_templates/: layout.html
examples/: plot_sampling.py
pysample/: indicators.py  optimization.py  sample.py  usage.py  util.py
pysample/methods/: halton.py  lhs.py  random.py  sampling.py  sobol.py  stratified.py
pysampling/: indicators.py  measures.py  optimization.py  sample.py  sampling.py  usage.py  util.py
pysampling/algorithms/: halton.py  lhs.py  random.py  sobol.py
pysampling/methods/: lhs.py  sobol.py
src/pysampling/: __init__.py  measures.py  sample.py  sampling.py  util.py
src/pysampling/algorithms/: halton.py  lhs.py  random.py  riesz.py  sobol.py
tests/: test_centered_l2_discrepancy.py  test_discrepancy.py  test_golden.py  test_indicator.py  test_sampling.py  test_sobol.py  test_suite.py  util.py
tests/archive/: centered_l2_discrepancy_slow.py
tests/golden/: test_golden.json
tests/resources/: centered_l2_discrepancy.val  centered_l2_discrepancy.x  discrepancy.x  test_sobol_1.txt  test_sobol_2.txt  test_sobol_3.txt  test_sobol_4.txt  test_sobol_5.txt  wrapped_l2_discrepancy.val
